move unit test to new component and fix spacing of the channel bar

--- a/components/social-media-bar/index.css
+++ b/components/social-media-bar/index.css
@@ -71,6 +71,10 @@
     display: flex;
     justify-content: center;
     color: #fff;
+
+    .social-list__link {
+      padding: 0 .75rem;
+    }
   }
 
   &__icon {
